--- a/_config.yml
+++ b/_config.yml
@@ -13,30 +13,32 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: فرهاد حسن پور
-email: farhadhp.ir@gmail.com
-description: >- # this means to ignore newlines until "baseurl:"
-  طراح و توسعه دهنده وب، برنامه نویس ارشد php، فعال در حوزه تجارت الکترونیک
-
+title: Farhad Hassan Pour
+email: your-email@example.com
+description: web developer
+descriptionmeta: web developer
+avatar: https://secure.gravatar.com/avatar/7dc47934ba942297a531525287e596c5?s=140&d=mm&r=g
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
-twitter_username: farhadxfarhad
-github_username:  farhadhp
+url: https://farhadhp.github.io
+email: farhadhp.ir@gmail.com
+permalink: /:title/
+github_username: farhadhp
 instagram_username: farhad.hassan.pour
 linkedin_username: farhadhp
-youtube_username: farhadhp
+twitter_username: farhadxfarhad
 
-permalink: /:title/
+# Enter your Disqus shortname (not your username) to enable commenting on posts
+# You can find your shortname on the Settings page of your Disqus account
+disqus: http-farhadhp-ir
+
+# Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
+google_analytics:
 
 # Build settings
 markdown: kramdown
 theme: minima
 plugins:
-  - jekyll-feed # Create an Atom feed using the official Jekyll feed gem
-#  - jekyll-sitemap
-#  - jalalidate
-#  - jekyll-paginate
-#  - jekyll-jalali
+  - jekyll-feed
 
 # Exclude from processing.
 # The following items will not be processed, by default. Create a custom list
@@ -49,6 +51,3 @@ plugins:
 #   - vendor/cache/
 #   - vendor/gems/
 #   - vendor/ruby/
-
-#paginate: 10
-#paginate_path: "/page:num/"
