--- a/_config.yml
+++ b/_config.yml
@@ -29,7 +29,7 @@ twitter_username: farhadxfarhad
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
-disqus: http-farhadhp-ir
+disqus_shortname: http-farhadhp-ir
 
 # Enter your Google Analytics web tracking code (e.g. UA-2110908-2) to activate tracking
 google_analytics:
